# polyquest

./: .gitignore  Cargo.toml  README.md  client.sh  client_dev.sh  client_helper.sh  client_prod.sh  credits.txt  polyfight_tankdefs.rs  run.sh  server.sh  server_dev.sh  server_helper.sh  server_prod.sh
assets/: client.d.ts  client.js  client_bg.wasm  client_bg.wasm.d.ts  index.html  style.css
client/: Cargo.toml
client/src/: lib.rs  world.rs
client/src/connection/: mod.rs  packets.rs  socket.rs
client/src/core/: mod.rs
client/src/core/rendering/: events.rs  mod.rs  phases.rs  renderer.rs
client/src/game/: entity.rs  mod.rs  theme.rs
client/src/game/entity/: base.rs  mod.rs  orb.rs  projectile.rs  tank.rs
client/src/rendering/: events.rs  mod.rs  phases.rs  renderer.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
server/src/connection/: mod.rs  packets.rs  wss.rs
server/src/game/: clans.rs  entity.rs  mod.rs  state.rs
server/src/game/collision/: mod.rs  shg.rs
server/src/game/entity/: ai.rs  base.rs  mod.rs  orb.rs  projectile.rs  tank.rs
server/src/game/physics/: collision.rs  shg.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/connection/: packets.rs
shared/src/game/: body.rs  entity.rs  mod.rs  orb.rs  theme.rs  turret.rs
shared/src/utils/: codec.rs  color.rs  components.rs  consts.rs  interpolatable.rs  macros.rs  mod.rs  vec2.rs
ui/: Cargo.toml
ui/src/: button.rs  canvas2d.rs  color.rs  core.rs  label.rs  lib.rs
ui/src/elements/: body.rs  button.rs  checkbox.rs  image.rs  input.rs  label.rs  mod.rs  modal.rs  progress_bar.rs  rect.rs  tank.rs  tooltip.rs
ui/src/gl/: mod.rs  shaders.rs  webgl.rs
ui/src/gl/shaders/: crt.glsl  frag.glsl
ui/src/utils/: color.rs  mod.rs  sound.rs
