[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
ui = { path = "../ui" }
reqwest = "0.12.8"
serde_json = "1.0.128"
wasm-bindgen-futures = "0.4.45"
gloo-utils = "0.2.0"
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
rand = "0.8.5"
send_wrapper = "0.6.0"
derive-new = "0.7.0"
strum = "0.26.3"
strum_macros = "0.26.4"
num_enum = "0.7.3"
regex = "1.11.1"

[dependencies.web-sys]
version = "0.3.72"
features = [
  "MouseEvent",
  "KeyboardEvent",
  "Window",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "CloseEvent",
  "HtmlCanvasElement",
  "HtmlButtonElement",
  "CssStyleDeclaration",
  "HtmlDivElement",
  "Performance",
  "Location",
  "BeforeUnloadEvent",
  "HtmlAudioElement",
  "Navigator",
  "UserActivation",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
