[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws", "tokio"] }
axum-extra = "0.9.4"
tokio = { version = "1.40.0", features = ["full"] }
shared = { path = "../shared" }
futures = "0.3.31"
derive-new = "0.7.0"
strum = "0.26.3"
strum_macros = "0.26.4"
