[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.20.2"
gloo = "0.11.0"
glow = "0.15.0"
rand = "0.8.5"
shared = { path = "../shared" }
wasm-bindgen = "0.2.95"

[dependencies.web-sys]
version = "0.3.72"
features = [
  "BinaryType",
  "MessageEvent",
  "MouseEvent",
  "KeyboardEvent",
  "WebSocket",
  "Window",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "CloseEvent",
  "HtmlCanvasElement",
  "HtmlButtonElement",
  "CssStyleDeclaration",
  "HtmlDivElement",
  "Performance",
  "Location",
  "BeforeUnloadEvent",
  "TextMetrics",
  "DomMatrix",
  "WebGlRenderingContext",
  "WebGlTexture",
  "WebGlShader",
  "WebGlProgram",
  "WebGlUniformLocation",
  "WebGlBuffer"
]
