[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.20.2"
gloo = "0.11.0"
gloo-timers = "0.3.0"
rand = "0.8.5"
shared = { path = "../shared" }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"

[dependencies.web-sys]
version = "0.3.72"
features = [
  "Window",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "TextMetrics",
  "DomMatrix",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlProgram",
  "WebGlTexture",
  "WebGlBuffer",
  "WebGlUniformLocation",
  "DomStringMap",
  "CanvasGradient",
  "HtmlImageElement",
  "DomRect"
]
